final test commit

--- a/index.html
+++ b/index.html
@@ -4,70 +4,221 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming landing page</title>
-    <link rel="shortcut icon" href="./images/Frame.png4" type="image/x-icon">
+    <title>Gamer Zone</title>
+    <link rel="icon" href="images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="responsive.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Open+Sans:wght@400;600;700;800&family=Poppins:wght@400;500;600;700&family=Roboto&family=Work+Sans:wght@400;500;600;700;800&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="responsibe.css">
 </head>
 
 <body>
-    <!-- Nav section start -->
     <header>
-        <nav class="nav-section">
+        <nav>
             <div class="logo">
-                <img src="./images/Frame.png" alt="">
-                <h1><span class="nav-title">G</span>amer</h1>
+                <img src="images/Frame.png" alt="">
+                <h3><span style="color: #ff3ba0;">G</span>amer</h3>
             </div>
-            <div class="nav-text-item">
+            <div class="nav-link">
                 <ul>
-                    <a href="">About Us</a>
-                    <a href="">Developers</a>
-                    <a href=""><button class="nav-btn">Follow Us On <i class="fa-brands fa-youtube"></i><i
-                                class="fa-brands fa-tiktok"></i></button></a>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Developers</a></li>
+                    <li><a class="follow-button" href="">Follow Us On <img src="images/youtube.png" alt=""> <img
+                                src="images/tik-tok 1.png" alt=""></a></li>
                 </ul>
             </div>
         </nav>
-        <header class="banner-container">
-            <div class="banner-text-content">
-                <h4>Play Like The</h4>
-                <h1>G.O.A.T.</h1>
-                <p class="banner-description">1-Click instant play</p>
-                <p class="banner-description">No Download</p>
-                <p class="banner-description">1000s of supported online games</p>
-                <div class="header-btn-section">
-                    <button class="first-btn">Sign In</button>
-                    <button class="secound-btn">Go Rogue</button>
+
+        <!-- banner section start -->
+        <section class="banner-container">
+            <div class="top-banner">
+                <div class="banner-texts">
+                    <h3>PLAY LIKE THE</h3>
+                    <h1 class="webkit-text">G.O.A.T.</h1>
+                    <div class="banner-text-img">
+                        <img src="images/play-icon.png" alt="">
+                        <p>1-Click instant play</p>
+                    </div>
+                    <div class="banner-text-img">
+                        <img src="images/download-icon.png" alt="">
+                        <p>No Download</p>
+                    </div>
+                    <div class="banner-text-img">
+                        <img src="images/support.png" alt="">
+                        <p>1000s of supported online games</p>
+                    </div>
+                    <div class="banner-button">
+                        <button class="primary-button">Sign In</button>
+                        <button class="secondary-button">Go Rogue</button>
+                    </div>
                 </div>
+                <img class="banner-img" src="images/Group 18.png" alt="">
             </div>
-            <div class="banner-img">
-                <img src="./images/Group 18.png" alt="">
-            </div>
-        </header>
+            <!-- another section -->
+            <section class="banner-container2">
+                <div class="top-banner-two">
+                    <div class="banner-two-img">
+                        <img class="banner-img" src="images/pngwing 4.png" alt="">
+                    </div>
+                    <div class="banner-texts">
+                        <h3 class="webkit-text">We are gamer</h3>
+                        <p class="banner-two-p">An international digital games and entertainment company. We develop,
+                            publish and distribute multiplayer mobile games. We reach over 400 million players each
+                            month and our audience keeps growing.</p>
+                        <button style="margin-top: 10px;" class="primary-button">know more</button>
+                        <p class="banner-two-p2">Our purpose...<br>
+                        <p style="font-weight: bold; margin-top: 5px;">“unleash the gamer in everyone”</p>
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </section>
     </header>
+
     <main>
-        <div class="we-are-gamer-section">
-            <div class="gamer-section-img">
-                <img src="./images/pngwing 4.png" alt="">
+        <!-- online-game-section -->
+        <section class="online-games-section">
+            <h3>Online Games<span style="color: #ff3ba0;">Funny Videos</span></h3>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+
+            <div class="game-card-container">
+                <div class="game-card">
+                    <a href="">
+                        <div class="game-img-contant">
+                            <img class="card-img" src="images/Rectangle 4.png" alt="">
+                            <div class="hide">
+                                <img class="play-img" src="images/play-button.png" alt="">
+                                <small class="watch-now">Watch Now</small>
+                            </div>
+                        </div>
+                    </a>
+                    <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="game-card">
+                    <a href="">
+                        <div class="game-img-contant">
+                            <img class="card-img" src="images/Rectangle 5.png" alt="">
+                            <div class="hide">
+                                <img class="play-img" src="images/play-button.png" alt="">
+                                <small class="watch-now">Watch Now</small>
+                            </div>
+                        </div>
+                    </a>
+                    <p>Did you score? #unblockedgames #school</p>
+                </div>
+                <div class="game-card">
+                    <a href="">
+                        <div class="game-img-contant">
+                            <img class="card-img" src="images/Rectangle 7.png" alt="">
+                            <div class="hide">
+                                <img class="play-img" src="images/play-button.png" alt="">
+                                <small class="watch-now">Watch Now</small>
+                            </div>
+                        </div>
+                    </a>
+                    <p>Breaking game records like OG</p>
+                </div>
+                <div class="game-card">
+                    <a href="">
+                        <div class="game-img-contant">
+                            <img class="card-img" src="images/Rectangle 6.png" alt="">
+                            <div class="hide">
+                                <img class="play-img" src="images/play-button.png" alt="">
+                                <small class="watch-now">Watch Now</small>
+                            </div>
+                        </div>
+                    </a>
+                    <p>Busted gaming on school laptop, but you are still lit.</p>
+                </div>
+
+
             </div>
-            <div class="gamer-text-section">
-                <h1>We are gamer</h1>
-                <p>An international digital games and entertainment company. We develop, publish and distribute
-                    multiplayer mobile games. We reach over 400 million players each month and our audience keeps
-                    growing.</p>
-                <button class="gamer-btn">know more</button>
-                <P><span class="purpose">Our purpose...</span> <br>
-                    <span class="unleash">“unleash the gamer in everyone”</span></P>
+
+        </section>
+        <!-- section-4 -->
+        <section class="section4">
+            <div class="section4-text">
+                <h3><span style="color: #ff3ba0; text-align: right;">Play Instantly,</span>
+                    No Downloads
+                    No Installs.
+                </h3>
+                <p class="section4-p">Play games online for free without downloading. Just click the Play button and
+                    play instantly in your
+                    browser.
+                </p>
             </div>
-        </div>
+            <div class="section4-img-div">
+                <img class="main-img" src="images/Rectangle 55.png" alt="">
+                <img class="sub-img" src="images/Rectangle 66.png" alt="">
+            </div>
+        </section>
     </main>
+
+    <!-- section-5 -->
+    <section class="section5">
+
+        <div class="section5-card">
+            <img src="images/Rectangle 11.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 12.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 13.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 14.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 15.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 16.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 17.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 18.png" alt="">
+            <p>Action Games</p>
+        </div>
+        <div class="section5-card">
+            <img src="images/Rectangle 19.png" alt="">
+            <p>Action Games</p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="logo">
+            <img src="images/Frame.png" alt="">
+            <h3><span style="color: #FF42A5;">G</span>amer</h3>
+        </div>
+        <div class="footer-p">
+            <p>Our Story</p>
+            <p>Games</p>
+            <p>Web Games</p>
+            <p>Careers</p>
+            <p>Support</p>
+            <p>My Account</p>
+        </div>
+        <div class="footer-img">
+            <a href=""><img src="images/twitter 1.png" alt=""></a>
+            <a href=""><img src="images/linkedin 1.png" alt=""></a>
+            <a href=""><img src="images/instagram 1.png" alt=""></a>
+        </div>
+        <div class="footer-small">
+            <small>Terms and Conditions</small>
+            <small>Privacy Policy</small>
+            <small>Cookie Policy</small>
+            <small>Privacy Settings</small>
+        </div>
+        <p style="font-size: 0.7rem;">&copy A1~RAKIB @ Gamer @ Team A1 Sports</p>
+    </footer>
 </body>
 
 </html>
